Changes in style of audio class in 'clix-activity-styles.css' for eliminating text overlap issue

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/clix-activity-styles.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/clix-activity-styles.css
@@ -208,7 +208,8 @@
 
 #scstyle audio {
   margin: 10px auto;
-  width: 100%;
+  /*width: 100%;*/
+  display: block;
 }
 
 
